@@ -1,34 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="metadata.common.hdtrailers.net"
-       name="HD-Trailers common scraper functions"
-       version="2.0.5"
-       provider-name="Olympia">
-  <requires>
-    <import addon="xbmc.metadata" version="2.1.0"/>
-  </requires>
-  <extension point="xbmc.metadata.scraper.library"
-             library="hdtrailers.xml"/>
-  <extension point="xbmc.addon.metadata">
-    <summary lang="en">HD-Trailers.net Scraper Library</summary>
-    <summary lang="de">Scraper für Trailer von HD-Trailers.net</summary>
-    <summary lang="es">Scraper de Trailers de HD-Trailers.net</summary>
-    <summary lang="fr">Scraper HD-Trailers.net pour les bande-annonces</summary>
-    <summary lang="hu">HD-Trailers.net leolvasó-könyvtár</summary>
-    <summary lang="nl">HD-Trailers.net Scraper Collectie</summary>
-    <summary lang="pl">Scraper zwiastunów HD-Trailers.net</summary>
-    <summary lang="pt">Scraper de trailers de HD-Trailers.net</summary>
-    <summary lang="ru">Обработчик для трейлеров с HD-Trailers.net</summary>
-    <summary lang="zh">HD-Trailers.net刮削器代码库</summary>
-    <description lang="en">Download Movie Trailers from www.hd-trailers.net</description>
-    <description lang="de">Downloade Trailer von www.hd-trailers.net</description>
-    <description lang="es">Descarga trailers de www.hd-trailers.net</description>
-    <description lang="fr">Télécharge les bande-annonces de films depuis www.hd-trailers.net</description>
-    <description lang="hu">Filmelőzetesek letöltése a www.hd-trailers.net-ről</description>
-    <description lang="nl">Download trailers van www.hd-trailers.net</description>
-    <description lang="pl">Pobieraj zwiastuny filmowe z www.hd-trailers.net</description>
-    <description lang="pt">Descarregar trailers de www.hd-trailers.net</description>
-    <description lang="ru">Загружать трейлеры с www.hd-trailers.net</description>
-    <description lang="zh">从www.hd-trailers.net下载电影预告片</description>
-    <platform>all</platform>
-  </extension>
-</addon>
